Integrazione Firma Digitale da testare (chiedere configurazione referer)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1276,3 +1276,10 @@ li.listStyle-elenco > label{
 	color: white;
 	border-color: #d9534f;
 }
+
+.frame_invisible {
+		position:relative;
+	    border: 0 none;
+	    width: 100%;
+	    height: 620px;
+	} 
