--- a/src/main/resources/templates/engineering/firmaTest.html
+++ b/src/main/resources/templates/engineering/firmaTest.html
@@ -3,34 +3,72 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	layout:decorator="fragments/template">
 <head lang="it">
+	<style type="text/css"> 
+	.frame_invisible {
+		position:relative;
+	    border: 0 none;
+	    width: 100%;
+	    height: 620px;
+	} 
+	</style>
+
 </head>
 <body>
 	<div layout:fragment="content">
 		<div class="row">
+		
+		<!-- <div id="modalFrame" class="modal" tabindex="-1" role="dialog" >
+				<div role="document" style="margin: 30px auto; width: 520px;">
+					Modal content 
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+						</div>
+						<div class="modal-body">
+							<iframe id="firmaFrame" src="" class="frame_invisible"></iframe>
+						</div>
+					</div>
+				</div>
+			</div> -->
+			
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{engineering.test_firma}">engineering.test_firma</h2>
 						<div class="pull-right buttons-header">
-							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formFirma" type="submit"></button>
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/home|}"></a>
+							<button class="btn btn-success pull-right"
+								th:text="#{label.salva}" form="formFirma" type="submit"></button>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}"
+								th:href="@{|/home|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
-						<form id="formFirma" class="form-horizontal form-label-left" th:action="@{|/engineering/test/firma/save|}"
-								method="post" enctype="multipart/form-data" novalidate="novalidate">
+						<form id="formFirma" class="form-horizontal form-label-left"
+							th:action="@{|/engineering/test/firma/save|}" method="post"
+							enctype="multipart/form-data" novalidate="novalidate">
 
-							<input type="hidden" name="editId" th:value="${engineeringWrapper.provider.id}" />
+							<input type="hidden" name="editId"
+								th:value="${engineeringWrapper.provider.id}" />
 
 							<!-- firma 1 -->
-							<th:block th:include="fragments/allegati :: allegati(engineeringWrapper, false, fileDaFirmare, null, null, null, true, true, false)" ></th:block>
+						<!-- 	<th:block
+								th:include="fragments/allegati :: allegati(engineeringWrapper, false, fileDaFirmare, null,null,null,true, null, true)">
+							</th:block> -->
+							
+							<!-- firma 2 -->
+							<th:block
+								th:include="fragments/allegatiext :: allegatiext(engineeringWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_DA_FIRMARE}', fileDaFirmare, null,null,null,true, edit, true)">
+							</th:block>
 
 						</form>
 					</div>
+
 				</div>
 			</div>
 		</div>
 	</div>
 </body>
 </html>
+
+
